Agregamos un espacio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Hola desde html</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nesciunt atque, laudantium 
     unde tempora deserunt 3333 et asperiores aliquid praesentium accusamus officia distinctio ex. 
-    Cum sed dignissimos unde ea et.</p>
+    Cum sed dignissimos unde eja et.</p>
 </body>
 </html>
